--- a/proj_accident/docker-compose.yaml
+++ b/proj_accident/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
      - /var/run/docker.sock:/var/run/docker.sock
   clickhouse-server:
     image: yandex/clickhouse-server
+    container_name: clickhouse-server
     ports:
       - 8123:8123
       - 9000:9000
@@ -35,7 +36,23 @@ services:
       - kafka
   clickhouse-client:
     image: yandex/clickhouse-client
+    container_name: clickhouse-client
     entrypoint:
       - /bin/sleep
     command:
       - infinity
+  graphite:
+    image: sitespeedio/graphite
+    container_name: graphite
+    ports:
+      - "2003:2003"
+      - "2004:2004"
+      - "8080:80"
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - 3000:3000/tcp
+    links:
+      - graphite
+
